--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ h3, h4 {clear:left;}
 
 
 hr {border-bottom:solid 1px #1D88AF;}
-h1, h2 {}
+
 
 /********************
 * Colour Map
@@ -94,7 +94,7 @@ nav  ul li a:hover,
 nav ul li a:focus {color:#333; background-color:#85CEE7; 
 	}
 nav  ul li a.active,
-nav ul li a [aria-describedby="current"],/* need to ad <div class="hidden" id="current">Current page</div> */
+nav ul li a[aria-describedby="current"],/* need to ad <div class="hidden" id="current">Current page</div> */
 nav ul li a.active:hover {background-color:#166683; color:#FFF;
 	}
 
@@ -170,6 +170,11 @@ header form {float:right; display:inline; padding:2px 0 4px 0;}
 
 /* Hide mobile only widgets */
 .mobileOnly {display:none;}
+
+/* footer */
+footer {
+	border-radius:6px;
+	}
 
 /*
 use .normal for most pages
@@ -293,7 +298,8 @@ blockquote {margin-left: 10px;}
 	border: solid 2px #1D88AF;
 	}
 
-
+.boxrow3 .box {width:33%;} /* higher values possible in desktop view */
+.boxrow2 .box {width:49.9%;} /*  */
 
 }/* end desktop view */
 
@@ -317,7 +323,6 @@ footer {
 	min-height:60px; 
 	margin:10px auto; 
 	overflow:hidden; 
-	border-radius:6px;
 	}
 footer ul {margin:1rem 0 0 21%; padding:0 0 10px 0; clear:left;}
 footer ul li {list-style-type: none; float:left; width:26%;}
@@ -329,7 +334,7 @@ footer ul li:first-child {width:20%;}
   display: flex;
 	}
 .box {
-	margin:0 10px 10px 0; 
+	margin:0 1% 10px 0; 
 	border:solid 1px #DDD;
 	border-radius:5px;
 	background:linear-gradient(#DDDDDD, #D0D0D0);
@@ -337,8 +342,7 @@ footer ul li:first-child {width:20%;}
 	-webkit-flex: 0 0 auto; /*support Safari 7 & 8 */
 	flex: 0 0 auto;
 	}
-.boxrow3 .box {width:31.5%;}
-.boxrow2 .box {width:48%;}
+
 .box:last-child {
     margin:0 0 10px 0;
 	} 
@@ -405,13 +409,13 @@ a img {border:none;}
 	/*overflow:hidden;*/
 	visibility:hidden;
 	height:0;
-	width:7rem;
+	/*width:5rem;*/
 	}
 .has-js nav ul.openMobileNav,
 .has-js nav ul:focus {
 	/*overflow:visible;*/
 	visibility:visible;
-	width:90%;
+	width:/*90%*/20rem;
 	}
 .has-js nav p {
 	background:#09C url(../img/furniture/hamburger.png) no-repeat;
@@ -430,6 +434,9 @@ a img {border:none;}
 #page {
 	width:100%; 
 	}
+	
+.boxrow3 .box {width:32.6%;} /* Slightly smaller values required on tablet view */
+.boxrow2 .box {width:49.3%;} /*  */
 footer ul {margin:1rem 0 0 1rem;}
 }
 
